# bios_renamer_for_asus

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: bios.rs  main.rs
