[package]
name = "bios_renamer_for_asus"
version = "0.2.0"
authors = ["Brenden Davidson <davidson.brenden15@gmail.com>"]
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/iAmSomeone2/bios_renamer_for_asus"
keywords = ["bios", "rename", "asus"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 3
lto = true

[dependencies]
chrono = "0.4.23"
clap = { version = "4.0.32", features = ["derive"] }
